[package]
name = "festy"
version = "1.0.0"
edition = "2021"
author="Sohn"
license-file="LICENSE"
readme="README.md"
description="3DS save file decompressor"
homepage="https://github.com/chrom-sevy/festy"
repository="https://github.com/chrom-sevy/festy"
keywords=["3ds", "file", "save", "decompression", "compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"